ACTUALLY I was maybe onto something here

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,22 +6,59 @@
   <title>Cheeki's Mods Archive</title>
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    .hide-videos iframe {
-      display: none;
-    }
-    h3, .platform-block {
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-    .rating {
-      flex-shrink: 0;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
-  </style>
+  
+ <style>
+  .hide-videos iframe {
+    display: none;
+  }
+  h3, .platform-block {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .rating {
+    flex-shrink: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  #mod-list {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  }
+
+  #mod-list > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    min-height: 450px; /* Adjust this number as needed */
+  }
+
+  #mod-list > div iframe {
+    margin-top: auto;
+  }
+   .title-row {
+  min-height: 1rem; /* Adjust height for title row */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.standalone-row,
+.platform-row {
+  min-height: 0.2rem; /* Equalize heights for rows */
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+</style>
+
+
 </head>
 <body class="bg-gray-900 text-white font-sans p-4">
   <div class="max-w-6xl mx-auto">
@@ -103,7 +139,7 @@
         card.className = 'bg-gray-800 p-3 rounded-md shadow-sm flex flex-col h-full';
 
         const titleRow = document.createElement('div');
-        titleRow.className = 'flex justify-between items-center mb-3 gap-2';
+        titleRow.className = 'title-row mb-3';
 
         const title = document.createElement('h3');
         title.className = 'text-2xl font-semibold text-gray-100 drop-shadow';
@@ -120,7 +156,8 @@
         titleRow.appendChild(rating);
 
         const standaloneDiv = document.createElement('div');
-        standaloneDiv.className = 'text-xs text-white mb-2 flex items-baseline gap-2';
+       standaloneDiv.className = 'standalone-row text-xs text-white mb-1'; // HERE
+
 
         const labelStandalone = document.createElement('span');
         labelStandalone.textContent = 'Standalone:';
@@ -159,7 +196,8 @@
         standaloneDiv.appendChild(standaloneWrapper);
 
         const platformDiv = document.createElement('div');
-        platformDiv.className = 'text-xs text-white mb-2 flex items-baseline gap-2 platform-block';
+       platformDiv.className = 'platform-row text-xs text-white mb-2 platform-block';
+
         platformDiv.style.whiteSpace = 'nowrap';
         platformDiv.style.overflow = 'hidden';
         platformDiv.style.textOverflow = 'ellipsis';
