--- a/index.html
+++ b/index.html
@@ -10,16 +10,10 @@
     .hide-videos iframe {
       display: none;
     }
-    h3, .platform-block {
+    h3, .platform-block, .rating {
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-    }
-    .rating {
-      flex-shrink: 0;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
     }
   </style>
 </head>
@@ -28,12 +22,8 @@
     <div class="flex justify-between items-center mb-1 gap-2">
       <h1 class="text-3xl font-bold">Cheeki's Mods Archive</h1>
       <div class="flex gap-2">
-        <button id="toggle-videos" aria-label="Toggle videos visibility" class="bg-gray-700 hover:bg-gray-600 text-white text-xs font-medium py-1 px-2 rounded">
-          Hide videos
-        </button>
-        <button id="contact-button" aria-label="Contact me" class="bg-gray-700 hover:bg-gray-600 text-white text-xs font-medium py-1 px-2 rounded">
-          Contact me
-        </button>
+        <button id="toggle-videos" aria-label="Toggle videos visibility" class="bg-gray-700 hover:bg-gray-600 text-white text-xs font-medium py-1 px-2 rounded">Hide videos</button>
+        <button id="contact-button" aria-label="Contact me" class="bg-gray-700 hover:bg-gray-600 text-white text-xs font-medium py-1 px-2 rounded">Contact me</button>
       </div>
     </div>
 
@@ -45,9 +35,7 @@
     </p>
 
     <div class="flex flex-wrap items-center gap-2 mb-4">
-      <button id="sort-button" aria-label="Sort mods by rating" class="bg-yellow-500 hover:bg-yellow-600 text-black text-sm font-medium py-1 px-3 rounded">
-        Sort by Rating
-      </button>
+      <button id="sort-button" aria-label="Sort mods by rating" class="bg-yellow-500 hover:bg-yellow-600 text-black text-sm font-medium py-1 px-3 rounded">Sort by Rating</button>
       <input id="search-input" type="text" aria-label="Search mods" placeholder="Search mods..." class="flex-1 min-w-[150px] px-2 py-1 text-sm rounded bg-gray-800 text-white border border-gray-700 focus:outline-none focus:ring-2 focus:ring-yellow-500" />
     </div>
 
@@ -58,7 +46,6 @@
     </footer>
   </div>
 
-  <!-- Install Guide Popup -->
   <div id="popup-overlay" class="fixed inset-0 bg-black bg-opacity-70 flex justify-center items-center hidden z-50">
     <div class="bg-gray-900 rounded-lg max-w-2xl w-full max-h-[90vh] overflow-auto relative p-4">
       <button id="popup-close" aria-label="Close popup" class="absolute top-2 right-2 text-gray-400 hover:text-white text-xl">&times;</button>
@@ -66,259 +53,128 @@
     </div>
   </div>
 
-  <!-- Contact Me Popup -->
   <div id="contact-overlay" class="fixed inset-0 bg-black bg-opacity-70 flex justify-center items-center hidden z-50">
     <div class="bg-gray-900 rounded-lg max-w-md w-full p-4 relative text-sm text-gray-200">
       <button id="contact-close" aria-label="Close contact popup" class="absolute top-2 right-2 text-gray-400 hover:text-white text-xl">&times;</button>
       <p class="mb-4">Only use this to report a broken link or incorrect information that needs fixing.</p>
-      <button id="reveal-email" class="bg-yellow-500 hover:bg-yellow-600 text-black text-xs font-medium py-1 px-2 rounded">
-        Reveal Email
-      </button>
+      <button id="reveal-email" class="bg-yellow-500 hover:bg-yellow-600 text-black text-xs font-medium py-1 px-2 rounded">Reveal Email</button>
       <p id="email-text" class="mt-2 text-blue-400 hidden">cheekitos@proton.me</p>
     </div>
   </div>
 
   <script>
-    let mods = [];
-    let sorted = false;
-    let originalMods = [];
+    let mods = [], sorted = false, originalMods = [];
+
+    const modList = document.getElementById('mod-list');
+    const overlay = document.getElementById('popup-overlay');
+    const popupContent = document.getElementById('popup-content');
+    const contactOverlay = document.getElementById('contact-overlay');
+    const emailText = document.getElementById('email-text');
 
     async function loadMods() {
       try {
-        const response = await fetch('mods.json?v=' + Date.now());
-        mods = await response.json();
+        const res = await fetch('mods.json?v=' + Date.now());
+        mods = await res.json();
         originalMods = [...mods];
         renderMods(mods);
-      } catch (err) {
-        console.error('Error loading mods.json:', err);
+      } catch (e) {
+        console.error('Error loading mods.json:', e);
       }
     }
 
     function renderMods(modArray) {
-      const container = document.getElementById('mod-list');
-      container.innerHTML = '';
+      modList.innerHTML = '';
       modArray.forEach(mod => {
         const card = document.createElement('div');
         card.className = 'bg-gray-800 p-3 rounded-md shadow-sm flex flex-col h-full';
 
-        const titleRow = document.createElement('div');
-        titleRow.className = 'flex justify-between items-center mb-3 gap-2';
+        card.innerHTML = `
+          <div class="flex justify-between items-center mb-3 gap-2">
+            <h3 class="text-2xl font-semibold text-gray-100 drop-shadow">${mod.title}</h3>
+            <div class="flex items-center space-x-0.5 text-yellow-400 rating">${renderStars(mod.rating)}</div>
+          </div>
+          <div class="text-xs text-white mb-2 flex items-baseline gap-2">
+            <span class="leading-tight">Standalone:</span>
+            <div class="flex items-center gap-1">
+              <span class="${mod.standalone ? 'border border-white bg-yellow-400 bg-opacity-45' : 'text-gray-400'} px-2 py-0.5 rounded-sm text-[10px] leading-tight">Yes</span>
+              <span class="text-gray-400 text-[10px] leading-tight">|</span>
+              <span class="${!mod.standalone ? 'border border-white bg-yellow-400 bg-opacity-45' : 'text-gray-400'} px-2 py-0.5 rounded-sm text-[10px] leading-tight">No</span>
+            </div>
+          </div>
+          <div class="text-xs text-white mb-2 flex items-baseline gap-2 platform-block">
+            <span class="leading-tight">Platform:</span>
+            <div class="flex items-center gap-1">
+              ${['Shadow of Chernobyl', 'Clear Sky', 'Call of Pripyat'].map((plat, i) => `
+                <span class="${mod.platform === plat ? 'border border-white bg-yellow-400 bg-opacity-50' : 'text-gray-400'} px-2 py-0.5 rounded-sm text-[10px] leading-tight">${plat}</span>
+                ${i < 2 ? '<span class="text-gray-400 text-[10px] leading-tight">|</span>' : ''}
+              `).join('')}
+            </div>
+          </div>
+          <p class="text-gray-400 mb-2 text-sm">${mod.description}</p>
+          <div class="mb-2">
+            ${(mod.links || []).map(link => `
+              <a href="${link.url}" class="block text-blue-400 hover:underline text-sm cursor-pointer" ${link.label.toLowerCase().includes('install guide') ? '' : 'target="_blank"'}>${link.label}</a>
+            `).join('')}
+          </div>
+          <div class="mt-2">
+            <iframe src="${mod.video}" class="w-full aspect-video rounded" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        `;
 
-        const title = document.createElement('h3');
-        title.className = 'text-2xl font-semibold text-gray-100 drop-shadow';
-        title.textContent = mod.title;
-        title.style.whiteSpace = 'nowrap';
-        title.style.overflow = 'hidden';
-        title.style.textOverflow = 'ellipsis';
+        modList.appendChild(card);
 
-        const rating = document.createElement('div');
-        rating.className = 'flex items-center space-x-0.5 text-yellow-400 rating';
-        rating.innerHTML = renderStars(mod.rating);
-
-        titleRow.appendChild(title);
-        titleRow.appendChild(rating);
-
-        const standaloneDiv = document.createElement('div');
-        standaloneDiv.className = 'text-xs text-white mb-2 flex items-baseline gap-2';
-
-        const labelStandalone = document.createElement('span');
-        labelStandalone.textContent = 'Standalone:';
-        labelStandalone.className = 'leading-tight';
-        standaloneDiv.appendChild(labelStandalone);
-
-        const standaloneWrapper = document.createElement('div');
-        standaloneWrapper.className = 'flex items-center gap-1';
-
-        const yesSpan = document.createElement('span');
-        yesSpan.textContent = 'Yes';
-        yesSpan.className = mod.standalone
-          ? 'border border-white px-2 py-0.5 rounded-sm text-[10px] text-white leading-tight'
-          : 'text-gray-400 text-[10px] leading-tight';
-        if (mod.standalone) {
-          yesSpan.style.backgroundColor = 'rgba(250, 204, 21, 0.45)';
-        }
-
-        standaloneWrapper.appendChild(yesSpan);
-
-        const sep = document.createElement('span');
-        sep.textContent = '|';
-        sep.className = 'text-gray-400 text-[10px] leading-tight';
-        standaloneWrapper.appendChild(sep);
-
-        const noSpan = document.createElement('span');
-        noSpan.textContent = 'No';
-        noSpan.className = !mod.standalone
-          ? 'border border-white px-2 py-0.5 rounded-sm text-[10px] text-white leading-tight'
-          : 'text-gray-400 text-[10px] leading-tight';
-        if (!mod.standalone) {
-          noSpan.style.backgroundColor = 'rgba(250, 204, 21, 0.45)';
-        }
-
-        standaloneWrapper.appendChild(noSpan);
-        standaloneDiv.appendChild(standaloneWrapper);
-
-        const platformDiv = document.createElement('div');
-        platformDiv.className = 'text-xs text-white mb-2 flex items-baseline gap-2 platform-block';
-        platformDiv.style.whiteSpace = 'nowrap';
-        platformDiv.style.overflow = 'hidden';
-        platformDiv.style.textOverflow = 'ellipsis';
-
-        const labelPlatform = document.createElement('span');
-        labelPlatform.textContent = 'Platform:';
-        labelPlatform.className = 'leading-tight';
-        platformDiv.appendChild(labelPlatform);
-
-        const platformWrapper = document.createElement('div');
-        platformWrapper.className = 'flex items-center gap-1';
-
-        ['Shadow of Chernobyl', 'Clear Sky', 'Call of Pripyat'].forEach((plat, idx, arr) => {
-          const span = document.createElement('span');
-          span.textContent = plat;
-          span.className = (mod.platform === plat)
-            ? 'border border-white bg-yellow-400 bg-opacity-50 px-2 py-0.5 rounded-sm text-[10px] text-white leading-tight'
-            : 'text-gray-400 text-[10px] leading-tight';
-          platformWrapper.appendChild(span);
-
-          if (idx < arr.length - 1) {
-            const sep = document.createElement('span');
-            sep.textContent = '|';
-            sep.className = 'text-gray-400 text-[10px] leading-tight';
-            platformWrapper.appendChild(sep);
-          }
-        });
-
-        platformDiv.appendChild(platformWrapper);
-
-        const desc = document.createElement('p');
-        desc.className = 'text-gray-400 mb-2 text-sm';
-        desc.textContent = mod.description;
-
-        const links = document.createElement('div');
-        links.className = 'mb-2';
-        (mod.links || []).forEach(link => {
-          const a = document.createElement('a');
-          a.href = link.url;
-          a.textContent = link.label;
-          a.className = 'block text-blue-400 hover:underline text-sm cursor-pointer';
-          if (link.label.toLowerCase().includes('install guide')) {
+        card.querySelectorAll('a').forEach(a => {
+          if (a.textContent.toLowerCase().includes('install guide')) {
             a.addEventListener('click', e => {
               e.preventDefault();
-              openPopup(link.url);
+              openPopup(a.href);
             });
-          } else {
-            a.target = '_blank';
           }
-          links.appendChild(a);
         });
-
-        const videoWrapper = document.createElement('div');
-        videoWrapper.className = 'mt-2';
-
-        const video = document.createElement('iframe');
-        video.src = mod.video;
-        video.className = 'w-full aspect-video rounded';
-        video.allow = 'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture';
-        video.allowFullscreen = true;
-        videoWrapper.appendChild(video);
-
-        card.appendChild(titleRow);
-        card.appendChild(standaloneDiv);
-        card.appendChild(platformDiv);
-        card.appendChild(desc);
-        card.appendChild(links);
-        card.appendChild(videoWrapper);
-
-        container.appendChild(card);
       });
     }
 
     function renderStars(rating) {
-      const fullStar = '<svg class="w-4 h-4 fill-current" viewBox="0 0 20 20"><path d="M10 15l-5.878 3.09 1.122-6.545L.487 6.91l6.561-.955L10 0l2.952 5.955 6.561.955-4.757 4.635 1.122 6.545z"/></svg>';
-      const halfStar = `<svg class="w-4 h-4" viewBox="0 0 20 20"><defs><linearGradient id="halfGrad" x1="0" x2="100%" y1="0" y2="0"><stop offset="50%" stop-color="#facc15"/><stop offset="50%" stop-color="#4b5563"/></linearGradient></defs><path fill="url(#halfGrad)" d="M10 15l-5.878 3.09 1.122-6.545L.487 6.91l6.561-.955L10 0l2.952 5.955 6.561.955-4.757 4.635 1.122 6.545z"/></svg>`;
-      let starsHTML = '';
-      for (let i = 1; i <= 5; i++) {
-        if (rating >= i) {
-          starsHTML += fullStar;
-        } else if (rating + 0.5 >= i) {
-          starsHTML += halfStar;
-        } else {
-          starsHTML += `<svg class="w-4 h-4 fill-gray-600" viewBox="0 0 20 20"><path d="M10 15l-5.878 3.09 1.122-6.545L.487 6.91l6.561-.955L10 0l2.952 5.955 6.561.955-4.757 4.635 1.122 6.545z"/></svg>`;
-        }
-      }
-      return starsHTML;
+      const star = (cls) => `<svg class="w-4 h-4 ${cls}" viewBox="0 0 20 20"><path d="M10 15l-5.878 3.09 1.122-6.545L.487 6.91l6.561-.955L10 0l2.952 5.955 6.561.955-4.757 4.635 1.122 6.545z"/></svg>`;
+      const halfStar = `<svg class="w-4 h-4" viewBox="0 0 20 20"><defs><linearGradient id="halfGrad" x1="0" x2="100%"><stop offset="50%" stop-color="#facc15"/><stop offset="50%" stop-color="#4b5563"/></linearGradient></defs><path fill="url(#halfGrad)" d="M10 15l-5.878 3.09 1.122-6.545L.487 6.91l6.561-.955L10 0l2.952 5.955 6.561.955-4.757 4.635 1.122 6.545z"/></svg>`;
+      return Array.from({length: 5}, (_, i) => rating >= i + 1 ? star('fill-current') : rating >= i + 0.5 ? halfStar : star('fill-gray-600')).join('');
     }
-
-    const overlay = document.getElementById('popup-overlay');
-    const popupContent = document.getElementById('popup-content');
-    const popupClose = document.getElementById('popup-close');
 
     function openPopup(url) {
       popupContent.innerHTML = 'Loading...';
       overlay.classList.remove('hidden');
-      fetch(url + '?v=' + Date.now())
-        .then(res => {
-          if (!res.ok) throw new Error('Failed to load');
-          return res.text();
-        })
-        .then(html => {
-          popupContent.innerHTML = html;
-          popupContent.scrollTop = 0;
-        })
-        .catch(() => {
-          popupContent.innerHTML = '<p class="text-red-400">Failed to load guide.</p>';
-        });
+      fetch(url + '?v=' + Date.now()).then(r => r.ok ? r.text() : Promise.reject()).then(html => {
+        popupContent.innerHTML = html;
+        popupContent.scrollTop = 0;
+      }).catch(() => {
+        popupContent.innerHTML = '<p class="text-red-400">Failed to load guide.</p>';
+      });
     }
 
-    popupClose.addEventListener('click', () => overlay.classList.add('hidden'));
-    overlay.addEventListener('click', e => {
-      if (e.target === overlay) overlay.classList.add('hidden');
-    });
-
+    document.getElementById('popup-close').onclick = () => overlay.classList.add('hidden');
+    overlay.onclick = e => { if (e.target === overlay) overlay.classList.add('hidden'); };
+    document.getElementById('contact-button').onclick = () => contactOverlay.classList.remove('hidden');
+    document.getElementById('contact-close').onclick = () => contactOverlay.classList.add('hidden');
+    contactOverlay.onclick = e => { if (e.target === contactOverlay) contactOverlay.classList.add('hidden'); };
+    document.getElementById('reveal-email').onclick = () => emailText.classList.remove('hidden');
+    document.getElementById('toggle-videos').onclick = () => {
+      document.body.classList.toggle('hide-videos');
+      document.getElementById('toggle-videos').textContent = document.body.classList.contains('hide-videos') ? 'Show Videos' : 'Hide Videos';
+    };
+    document.getElementById('sort-button').onclick = () => {
+      sorted = !sorted;
+      renderMods(sorted ? [...mods].sort((a, b) => b.rating - a.rating) : originalMods);
+    };
+    document.getElementById('search-input').oninput = e => {
+      const q = e.target.value.toLowerCase();
+      renderMods(mods.filter(m => m.title.toLowerCase().includes(q) || m.description.toLowerCase().includes(q) || (m.platform && m.platform.toLowerCase().includes(q))));
+    };
     document.addEventListener('keydown', e => {
       if (e.key === 'Escape') {
         overlay.classList.add('hidden');
         contactOverlay.classList.add('hidden');
       }
     });
-
-    document.getElementById('sort-button').addEventListener('click', () => {
-      sorted = !sorted;
-      const toRender = sorted
-        ? [...mods].sort((a, b) => parseFloat(b.rating) - parseFloat(a.rating))
-        : originalMods;
-      renderMods(toRender);
-    });
-
-    document.getElementById('search-input').addEventListener('input', e => {
-      const q = e.target.value.toLowerCase();
-      const filtered = mods.filter(mod =>
-        mod.title.toLowerCase().includes(q) ||
-        mod.description.toLowerCase().includes(q) ||
-        (mod.platform && mod.platform.toLowerCase().includes(q))
-      );
-      renderMods(filtered);
-    });
-
-    document.getElementById('toggle-videos').addEventListener('click', () => {
-      const btn = document.getElementById('toggle-videos');
-      const isHiding = document.body.classList.toggle('hide-videos');
-      btn.textContent = isHiding ? 'Show Videos' : 'Hide Videos';
-    });
-
-    // Contact popup logic
-    const contactOverlay = document.getElementById('contact-overlay');
-    const contactBtn = document.getElementById('contact-button');
-    const contactClose = document.getElementById('contact-close');
-    const revealEmail = document.getElementById('reveal-email');
-    const emailText = document.getElementById('email-text');
-
-    contactBtn.addEventListener('click', () => contactOverlay.classList.remove('hidden'));
-    contactClose.addEventListener('click', () => contactOverlay.classList.add('hidden'));
-    contactOverlay.addEventListener('click', e => {
-      if (e.target === contactOverlay) contactOverlay.classList.add('hidden');
-    });
-    revealEmail.addEventListener('click', () => emailText.classList.remove('hidden'));
-
     loadMods();
   </script>
 </body>
