Spill issues fix

--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
             </div>
           </div>
           
-          <div class="text-xs text-white mb-2 flex items-baseline gap-2 platform-block" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
-            <span class="leading-tight">Platform:</span>
-            <div class="flex items-center gap-1">${platformHTML}</div>
+          <div class="text-xs text-white mb-2 flex items-baseline gap-2 platform-block" style="overflow: hidden;">
+            <span class="leading-tight flex-shrink-0">Platform:</span>
+            <div class="flex items-center gap-1 min-w-0" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">${platformHTML}</div>
           </div>
           
           <p class="text-gray-400 text-sm">${mod.description}</p>
