--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
             </div>
           </div>
           
-          <div class="text-xs text-white mb-2 flex items-baseline gap-2 platform-block" style="overflow: hidden;">
+          <div class="text-xs text-white mb-2 flex items-baseline gap-2 platform-block" style="min-width: 0; overflow: hidden;">
             <span class="leading-tight flex-shrink-0">Platform:</span>
-            <div class="flex items-center gap-1 min-w-0" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">${platformHTML}</div>
+            <div class="flex items-center gap-1 overflow-hidden" style="white-space: nowrap; text-overflow: ellipsis; min-width: 0;">${platformHTML}</div>
           </div>
           
           <p class="text-gray-400 text-sm">${mod.description}</p>
