--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
             </div>
           </div>
           
-          <div class="text-xs text-white mb-2 flex items-baseline gap-2 platform-block" style="min-width: 0; overflow: hidden;">
-            <span class="leading-tight flex-shrink-0">Platform:</span>
-            <div class="flex items-center gap-1 overflow-hidden" style="white-space: nowrap; text-overflow: ellipsis; min-width: 0;">${platformHTML}</div>
+          <div class="text-xs text-white mb-2 platform-block" style="display: flex; align-items: baseline; gap: 0.5rem; min-width: 0;">
+            <span class="leading-tight" style="flex-shrink: 0;">Platform:</span>
+            <div style="flex: 1; min-width: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">${platformHTML}</div>
           </div>
           
           <p class="text-gray-400 text-sm">${mod.description}</p>
