--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         const spanClass = isActive 
           ? 'border border-white bg-yellow-400 bg-opacity-50 px-2 py-0.5 rounded-sm text-[10px] text-white leading-tight inline-block'
           : 'text-gray-400 text-[10px] leading-tight inline-block';
-        const separator = idx < platforms.length - 1 ? '<span class="text-gray-400 text-[10px] leading-tight inline-block">|</span>' : '';
+        const separator = idx < platforms.length - 1 ? ' <span class="text-gray-400 text-[10px] leading-tight inline-block mx-1">|</span> ' : '';
         return `<span class="${spanClass}">${plat}</span>${separator}`;
       }).join('');
 
