THE VERSION BEFORE THAT IS PERFECT - ROLLBACK HERE IF NEEDED

--- a/index.html
+++ b/index.html
@@ -71,10 +71,12 @@
     <div class="bg-gray-900 rounded-lg max-w-md w-full p-4 relative text-sm text-gray-200">
       <button id="contact-close" aria-label="Close contact popup" class="absolute top-2 right-2 text-gray-400 hover:text-white text-xl">&times;</button>
       <p class="mb-4">Only use this to report a broken link or incorrect information that needs fixing.</p>
-      <button id="reveal-email" class="bg-yellow-500 hover:bg-yellow-600 text-black text-xs font-medium py-1 px-2 rounded">
-        Reveal Email
-      </button>
-      <p id="email-text" class="mt-2 text-blue-400 hidden">cheekitos@proton.me</p>
+      <div class="flex items-center gap-2">
+        <button id="reveal-email" class="bg-yellow-500 hover:bg-yellow-600 text-black text-xs font-medium py-1 px-2 rounded">
+          Reveal Email
+        </button>
+        <p id="email-text" class="text-blue-400 hidden">cheekitos@proton.me</p>
+      </div>
     </div>
   </div>
 
