--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
             </div>
           </div>
           
-          <div class="text-xs text-white mb-2 platform-block" style="display: flex; align-items: baseline; gap: 0.5rem; min-width: 0;">
-            <span class="leading-tight" style="flex-shrink: 0;">Platform:</span>
-            <div style="flex: 1; min-width: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">${platformHTML}</div>
+          <div class="text-xs text-white mb-2" style="display: block; overflow: hidden;">
+            <span class="leading-tight" style="display: inline;">Platform:</span>
+            <span style="display: inline; margin-left: 0.5rem; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; max-width: calc(100% - 60px);">${platformHTML}</span>
           </div>
           
           <p class="text-gray-400 text-sm">${mod.description}</p>
